--- a/GGRestapp.html
+++ b/GGRestapp.html
@@ -1954,7 +1954,8 @@
                 sessions: true,
                 fileDownload: false,
                 formInteractions: false,
-                elementInteractions: false
+                elementInteractions: false,
+                frustrationInteractions: true   // enables rage + dead clicks
             }
         });
 
